Refactor (#2)